--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ead0f5;
+  background-color: #e4c9f0;
   color: #212121;
   line-height: 1.5;
 }
